# alpha-zero

./: .gitignore  Cargo.toml
alpha-zero-arena/: Cargo.toml
alpha-zero-arena/src/: arena.rs  main.rs
alpha-zero-game/: Cargo.toml
alpha-zero-game/src/: augmentation_utils.rs  games.rs  lib.rs
alpha-zero-game/src/games/: chess.rs  gomoku15.rs  gomoku9.rs  tictactoe.rs
alpha-zero-mcts/: Cargo.toml
alpha-zero-mcts/src/: lib.rs  node.rs  node_allocator.rs
alpha-zero-nn/: Cargo.toml
alpha-zero-nn/src/: lib.rs  model.rs  nn_optimizer.rs
alpha-zero-train/: Cargo.toml
alpha-zero-train/src/: agent.rs  agents.rs  encode.rs  lib.rs  parallel_mcts_executor.rs  trajectory.rs
alpha-zero-train/src/agents/: alpha_zero_agent.rs  naive_agent.rs
src/: main.rs
