[package]
name = "arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../alpha-zero-game" }
mcts = { path = "../alpha-zero-mcts" }
nn = { path = "../alpha-zero-nn" }
train = { path = "../alpha-zero-train" }

tch = { version = "0.14", features = ["download-libtorch"] }
thiserror = { version = "1" }
