[package]
name = "train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../alpha-zero-game" }
mcts = { path = "../alpha-zero-mcts" }
nn = { path = "../alpha-zero-nn" }

log = { version = "0.4" }
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
rayon = { version = "1.8" }
tch = { version = "0.14", features = ["download-libtorch"] }
thiserror = { version = "1" }
indicatif = "0.17.7"
